[package]
name = "voidhunter"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
iced = { git = "https://github.com/iced-rs/iced", rev = "7afbb89ebfd49aa86453d45f7d9c13a7c48b58f2", features = ["tokio"] }
image = "0.25.6"
imageproc = "0.25.0"
tesseract = "0.15.2"
tokio = { version = "1.45.1", features = ["rt", "fs", "time"] }
windows-capture = "1.4.4"

